--- a/GardenShop/index_style.css
+++ b/GardenShop/index_style.css
@@ -14,6 +14,7 @@ html, body {
     margin: 0;
     padding: 0;
 	font-family: Lucida Console;
+	background-color: #e0ece4;
 }
 
 li {
@@ -28,10 +29,8 @@ li a {
 	text-decoration: none;
 }
 
-img + p {            /*Every p after img*/
-	visibility: hidden;
-	opacity: 0;
-	transition: visibility 2.5s, opacity 1.5s;
+img {
+	transition: filter 0.5s;
 }
 
 button {
@@ -46,12 +45,26 @@ footer { /*Fixed footer*/
 	width: 100%;
 	text-align: center;
 }
+
+/*Tags + class style*/
+img + .author {
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 2.5s, opacity 1.5s;
+}
+
 /*Tags transitions*/
 li a:hover {
 	background-color: #e0ece4;
 }
 
-img:hover + p {
+img:hover {
+	filter: blur(5px);
+}
+
+
+/*Tags + class transition*/
+img:hover + .author {
 	visibility: visible;
 	opacity: 1;
 }
@@ -72,6 +85,33 @@ img:hover + p {
 	border: solid 2px;
 	margin: 10px 10px 10px 10px;
 	border-radius: 10px;
+	text-align: center;
+	background-color: white;
+}
+
+.author {
+	transform: rotate(45deg) translate(-100px, -155px);
+	position: absolute;
+	white-space: nowrap;
+	font-size: 12px;
+}
+
+.category {
+	margin-left: 10px;
+	display:inline-block;
+}
+
+.itemsNum {
+	display: inline-block;
+	float: right;
+}
+
+.cart {
+	margin-left: 10px;
+	display:inline-block;
+	float: right;
+	margin-right: 10px;
+	margin-top: 8px;
 }
 
 /*Media queries*/
